After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 708372 - dmabuf: sys/mman.h: No such file or directory
dmabuf: sys/mman.h: No such file or directory
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
git master
Other Windows
: Normal blocker
: 1.2.0
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-09-19 13:27 UTC by Kyle
Modified: 2013-09-19 14:37 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Kyle 2013-09-19 13:27:17 UTC
I'm getting the following error when trying to compile the latest git commit of plugins base:

make[4]: Entering directory `/home/kyle/cerbero/sources/windows_x86/gst-plugins-base-1.0-1.0/gst-libs/gst/allocators'
/bin/bash ../../../libtool  --tag=CC   --mode=compile i686-w64-mingw32-gcc -std=gnu99 -DHAVE_CONFIG_H -I. -I../../..   -Wno-error  -I/home/kyle/software/cerbero/builds/win32/2013.09.19/include -I../../../gst-libs -I../../../gst-libs -mms-bitfields -I/home/kyle/software/cerbero/builds/win32/2013.09.19/include/glib-2.0 -I/home/kyle/software/cerbero/builds/win32/2013.09.19/lib/glib-2.0/include -mms-bitfields -I/home/kyle/software/cerbero/builds/win32/2013.09.19/include/gstreamer-1.0 -I/home/kyle/software/cerbero/builds/win32/2013.09.19/include/glib-2.0 -I/home/kyle/software/cerbero/builds/win32/2013.09.19/lib/glib-2.0/include   -DG_THREADS_MANDATORY -DG_DISABLE_DEPRECATED -Wall -Wdeclaration-after-statement -Wvla -Wpointer-arith -Wmissing-declarations -Wmissing-prototypes -Wredundant-decls -Wundef -Wwrite-strings -Wformat-nonliteral -Wformat-security -Winit-self -Wmissing-include-dirs -Waddress -Waggregate-return -Wno-multichar -Wnested-externs -Werror  -g   -DGST_DISABLE_DEPRECATED -Wall -g -O2 -DWINVER=0x0501 -Wno-error  -MT libgstallocators_1.0_la-gstdmabuf.lo -MD -MP -MF .deps/libgstallocators_1.0_la-gstdmabuf.Tpo -c -o libgstallocators_1.0_la-gstdmabuf.lo `test -f 'gstdmabuf.c' || echo './'`gstdmabuf.c
libtool: compile:  i686-w64-mingw32-gcc -std=gnu99 -DHAVE_CONFIG_H -I. -I../../.. -Wno-error -I/home/kyle/software/cerbero/builds/win32/2013.09.19/include -I../../../gst-libs -I../../../gst-libs -mms-bitfields -I/home/kyle/software/cerbero/builds/win32/2013.09.19/include/glib-2.0 -I/home/kyle/software/cerbero/builds/win32/2013.09.19/lib/glib-2.0/include -mms-bitfields -I/home/kyle/software/cerbero/builds/win32/2013.09.19/include/gstreamer-1.0 -I/home/kyle/software/cerbero/builds/win32/2013.09.19/include/glib-2.0 -I/home/kyle/software/cerbero/builds/win32/2013.09.19/lib/glib-2.0/include -DG_THREADS_MANDATORY -DG_DISABLE_DEPRECATED -Wall -Wdeclaration-after-statement -Wvla -Wpointer-arith -Wmissing-declarations -Wmissing-prototypes -Wredundant-decls -Wundef -Wwrite-strings -Wformat-nonliteral -Wformat-security -Winit-self -Wmissing-include-dirs -Waddress -Waggregate-return -Wno-multichar -Wnested-externs -Werror -g -DGST_DISABLE_DEPRECATED -Wall -g -O2 -DWINVER=0x0501 -Wno-error -MT libgstallocators_1.0_la-gstdmabuf.lo -MD -MP -MF .deps/libgstallocators_1.0_la-gstdmabuf.Tpo -c gstdmabuf.c  -DDLL_EXPORT -DPIC -o .libs/libgstallocators_1.0_la-gstdmabuf.o
gstdmabuf.c:35:22: fatal error: sys/mman.h: No such file or directory
compilation terminated.
make[4]: *** [libgstallocators_1.0_la-gstdmabuf.lo] Error 1

I believe it is related to this recent commit: d6187c00a680cb992e028a781d1a6599d133cf6f (http://cgit.freedesktop.org/gstreamer/gst-plugins-base/commit/?id=d6187c00a680cb992e028a781d1a6599d133cf6f)

Let me know if any further information is needed.
Comment 1 Sebastian Dröge (slomo) 2013-09-19 14:37:22 UTC
commit 9f91b2769de163963b2316d588d730de7b1787fb
Author: Sebastian Dröge <slomo@circular-chaos.org>
Date:   Thu Sep 19 16:33:29 2013 +0200

    dmabuf: Fix compilation if no mmap is available
    
    Also #ifdef some more code paths that don't make sense without mmap.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=708372